--- a/styles/uh.less
+++ b/styles/uh.less
@@ -1,15 +1,29 @@
-pre{
+pre {
   overflow-y: scroll;
   overflow-x: hidden;
   max-height: 200px;
   padding: 5px;
-  margin-top: 5px;
+  margin: 3px 0px;
+  padding: 5px;
+  background-color: #dedede;
+  white-space: pre-wrap;
+}
+
+.retry-btn {
+  height: 25px;
+  padding: 5px;
+  width: 125px;
+  font-weight: 500;
+}
+
+.alert {
+  margin-bottom: 0;
 }
 
 .external-link-icon {
   font-size: 8px;
 }
 
-.email-container{
+.email-container {
   margin-top: 5px;
 }
