template and styles

--- a/styles/uh.less
+++ b/styles/uh.less
@@ -9,6 +9,11 @@ pre {
   white-space: pre-wrap;
 }
 
+.summary-tag-icon {
+  color: rgba(0, 0, 0, 0.4);
+  margin-bottom: 0.5px;
+}
+
 .retry-btn {
   height: 25px;
   padding: 5px;
