--- a/templates/uh-summary.hbs
+++ b/templates/uh-summary.hbs
@@ -1,30 +1,62 @@
-{{#if details.url_count}}
-  <span {{on "click" (optional this.scrollToIntegration)}} class="integration-summary-tag integration-background-color integration-border-color">
-    <span class="acronym integration-text-bold-color">{{block.acronym}}</span>
-    <span class="integration-text-color">URL Count: {{details.url_count}}</span>
+{{#if (or details.isConnectionReset details.maxRequestQueueLimitHit details.isGatewayTimeout details.summaryTag)}}
+  <span
+    {{on 'click' (optional this.scrollToIntegration)}}
+    class='integration-summary-tag integration-background-color integration-border-color'
+  >
+    <span class='acronym integration-text-bold-color'>{{block.acronym}}</span>
+    <span class='integration-text-color'>
+      {{fa-icon icon='exclamation-circle' fixedWidth=true class='summary-tag-icon'}}
+      {{#if details.summaryTag}}
+        {{details.summaryTag}}
+      {{else}}
+        Search Limit Reached
+      {{/if}}
+    </span>
   </span>
-{{/if}}
-{{#if details.url_status}}
-  <span {{on "click" (optional this.scrollToIntegration)}} class="integration-summary-tag integration-background-color integration-border-color">
-    <span class="acronym integration-text-bold-color">{{block.acronym}}</span>
-    <span class="integration-text-color">URL Status: {{details.url_status}}</span>
-  </span>
-{{/if}}
-{{#if details.threat}}
-  <span {{on "click" (optional this.scrollToIntegration)}} class="integration-summary-tag integration-background-color integration-border-color">
-    <span class="acronym integration-text-bold-color">{{block.acronym}}</span>
-    <span class="integration-text-color">Threat Type: {{details.threat}}</span>
-  </span>
-{{/if}}
-{{#if details.file_type}}
-  <span {{on "click" (optional this.scrollToIntegration)}} class="integration-summary-tag integration-background-color integration-border-color">
-    <span class="acronym integration-text-bold-color">{{block.acronym}}</span>
-    <span class="integration-text-color">File Type: {{details.file_type}}</span>
-  </span>
-{{/if}}
-{{#if details.signature}}
-  <span {{on "click" (optional this.scrollToIntegration)}} class="integration-summary-tag integration-background-color integration-border-color">
-    <span class="acronym integration-text-bold-color">{{block.acronym}}</span>
-    <span class="integration-text-color">Signature: {{details.signature}}</span>
-  </span>
+{{else}}
+  {{#if details.url_count}}
+    <span
+      {{on 'click' (optional this.scrollToIntegration)}}
+      class='integration-summary-tag integration-background-color integration-border-color'
+    >
+      <span class='acronym integration-text-bold-color'>{{block.acronym}}</span>
+      <span class='integration-text-color'>URL Count: {{details.url_count}}</span>
+    </span>
+  {{/if}}
+  {{#if details.url_status}}
+    <span
+      {{on 'click' (optional this.scrollToIntegration)}}
+      class='integration-summary-tag integration-background-color integration-border-color'
+    >
+      <span class='acronym integration-text-bold-color'>{{block.acronym}}</span>
+      <span class='integration-text-color'>URL Status: {{details.url_status}}</span>
+    </span>
+  {{/if}}
+  {{#if details.threat}}
+    <span
+      {{on 'click' (optional this.scrollToIntegration)}}
+      class='integration-summary-tag integration-background-color integration-border-color'
+    >
+      <span class='acronym integration-text-bold-color'>{{block.acronym}}</span>
+      <span class='integration-text-color'>Threat Type: {{details.threat}}</span>
+    </span>
+  {{/if}}
+  {{#if details.file_type}}
+    <span
+      {{on 'click' (optional this.scrollToIntegration)}}
+      class='integration-summary-tag integration-background-color integration-border-color'
+    >
+      <span class='acronym integration-text-bold-color'>{{block.acronym}}</span>
+      <span class='integration-text-color'>File Type: {{details.file_type}}</span>
+    </span>
+  {{/if}}
+  {{#if details.signature}}
+    <span
+      {{on 'click' (optional this.scrollToIntegration)}}
+      class='integration-summary-tag integration-background-color integration-border-color'
+    >
+      <span class='acronym integration-text-bold-color'>{{block.acronym}}</span>
+      <span class='integration-text-color'>Signature: {{details.signature}}</span>
+    </span>
+  {{/if}}
 {{/if}}
