Add auth token, paging, url tags, and filtering

--- a/templates/uh-block.hbs
+++ b/templates/uh-block.hbs
@@ -19,7 +19,6 @@
         {{fa-icon "external-link-square" class="external-link-icon"}}</a>
 
       <h1 class="p-title">
-        {{fa-icon "info" fixedWidth=true}}
         Details
       </h1>
       {{#if details.file_type}}
@@ -120,14 +119,53 @@
               {{fa-icon "external-link-square" class="external-link-icon"}}</a></span>
         </div>
       {{/if}}
+
       {{#if details.urls}}
         <h1 class="p-title">
-          {{fa-icon "bug" fixedWidth=true}}
           Malware URLs
         </h1>
       {{/if}}
-      {{#each details.urls as |url|}}
-        <div class="mb-1">
+      {{!-- Begining of Data Filter --}}
+      <div class="input-container">
+        <label class="small ifta-label">
+          Filter by URL
+        </label>
+        {{input
+                class=(concat "ifta-field" (if uiElement.error " error"))
+                value=filterValue
+                placeholder="Enter filter value"
+                disabled=false
+                required=false
+        }}
+        {{#if (gt filterValue.length 0)}}
+          <span {{action (mut filterValue "")}}>
+            {{fa-icon icon="times-circle" fixedWidth=true class="clear-input-icon"}}
+          </span>
+        {{/if}}
+      </div>
+      {{!-- End of Data Filter --}}
+      {{!-- Beginning of Paging Header --}}
+      {{#if (gt filteredPagingData.length 0)}}
+        <div class="d-flex align-items-center justify-content-between mb-2">
+          <div class="pl-0 page-info p-footnote">
+            {{#if (gt filteredPagingData.length pageSize)}}
+              Viewing search results {{pagingStartItem}} - {{pagingEndItem}} of {{filteredPagingData.length}}
+            {{else}}
+              Viewing {{filteredPagingData.length}} search results
+            {{/if}}
+          </div>
+        </div>
+      {{else}}
+        <div class="p-footnote">
+          No results found
+        </div>
+      {{/if}}
+      {{!-- End of Paging Header --}}
+      {{#each pagedPagingData as |url|}}
+        <div class="url-container">
+          <h2 class="p-title">
+            Result #{{url._index}}
+          </h2>
           {{#if url.url}}
             <div>
               <span class="p-key">Malware URL: </span>
@@ -169,8 +207,45 @@
               <span class="p-value">{{url.reporter}}</span>
             </div>
           {{/if}}
+          {{#if (gt url.tags.length 0)}}
+            <div class="mt-1">
+              {{#each url.tags as | tag |}}
+                <span class="tag">{{tag}}</span>
+              {{/each}}
+            </div>
+          {{/if}}
         </div>
       {{/each}}
+      {{!-- Result Paging component --}}
+      {{#if (gt filteredPagingData.length pageSize)}}
+        <div class="paging-bar">
+          <div>
+            <span class="paging-bar-title">{{block.acronym}}</span>
+          </div>
+          <div class="d-flex align-items-center">
+            <button class="btn paging-btn" {{action "firstPage"}} disabled={{isPrevButtonsDisabled}}>
+              {{fa-icon icon="angle-double-left" fixedWidth=false}}
+            </button>
+            <button class="btn paging-btn" {{action "prevPage"}} disabled={{isPrevButtonsDisabled}}>
+              {{fa-icon icon="angle-left" fixedWidth=false}}
+            </button>
+            <div class="paging-info">
+              {{#if (eq pageSize 1)}}
+                {{pagingStartItem}} of {{filteredPagingData.length}}
+              {{else}}
+                {{pagingStartItem}} - {{pagingEndItem}} of {{filteredPagingData.length}}
+              {{/if}}
+            </div>
+            <button class="btn paging-btn" {{action "nextPage"}} disabled={{isNextButtonDisabled}}>
+              {{fa-icon icon="angle-right" fixedWidth=false}}
+            </button>
+            <button class="btn paging-btn" {{action "lastPage"}} disabled={{isNextButtonDisabled}}>
+              {{fa-icon icon="angle-double-right" fixedWidth=false}}
+            </button>
+          </div>
+        </div>
+      {{/if}}
+    {{!-- End of Paging Component --}}
     {{else}}
       No Results Found in
       {{block.name}}
