--- a/styles/uh.less
+++ b/styles/uh.less
@@ -14,3 +14,141 @@
 .external-link-icon {
   font-size: 8px;
 }
+
+.tag {
+  display: inline-block;
+  padding: 3px 5px;
+  border-radius: 3px;
+  border: 1px solid #eee;
+  margin-bottom: 5px;
+}
+
+h2.p-title {
+  font-size: 12px;
+  font-weight: 500;
+  color: #607d8b;
+  margin: 0px 0 3px 0;
+}
+
+.url-container {
+  border: 1px solid #dee2e6;
+  padding: 4px;
+  border-radius: 4px;
+  margin-bottom: 10px;
+
+  &:last-child {
+    margin-bottom: 0px;
+  }
+}
+
+/* Beginning of Paging Styles */
+.paging-bar {
+  display: flex;
+  align-items: center;
+  padding: 5px 0px 5px 0px;
+  justify-content: space-between;
+  position: sticky;
+  bottom: 0;
+  background-color: #fff;
+
+  .paging-bar-title {
+    font-weight: 500;
+  }
+
+  .paging-info {
+    margin: 0px 5px;
+  }
+
+  .paging-btn {
+    border: 1px solid #e4e9f2;
+    height: 20px;
+    padding: 0px 8px 0px 8px;
+
+    &:hover:enabled {
+      background-color: darken(#e4e9f2, 5%);
+    }
+  }
+}
+
+/* End of Paging Styles */
+
+/* Beginning Filter Sytles */
+@red: #FF4559;
+@green: #7bc942;
+@dark-green: #63a830;
+
+.input-container {
+  width: 100%;
+  position: relative;
+
+  label {
+    display: block;
+
+    .required {
+      color: @red;
+    }
+  }
+
+  input {
+    cursor: text;
+  }
+
+  .clear-input-icon {
+    position: absolute;
+    right: 10px;
+    top: 15px;
+    cursor: pointer;
+    color: #9a9a9a;
+
+    &:hover {
+      color: #484848;
+    }
+  }
+
+  .ifta-label {
+    margin-bottom: -15px;
+    z-index: 1;
+    position: relative;
+    padding: 0px 10px 0 5px;
+    pointer-events: none;
+  }
+
+  .ifta-field {
+    border: 0;
+    border-radius: 6px;
+    padding: 15px 30px 5px 5px;
+    margin: 0 0 10px;
+    width: 100%;
+    border: 1px solid #ccc;
+    line-height: 12px;
+    height: 38px;
+
+    &.error {
+      border-color: @red;
+    }
+  }
+
+  .ifta-field:focus {
+    -webkit-appearance: none;
+    outline: none;
+    color: #000000;
+    border-color: @green;
+    box-shadow: 0 0 0 0.2rem rgba(123, 201, 66, 0.25);
+  }
+
+  &:focus-within label {
+    color: @dark-green !important;
+  }
+
+  .select-arrow {
+    position: absolute;
+    right: 15px;
+    top: 10px;
+  }
+
+  input:disabled, select:disabled, textarea:disabled, &.text-area-container.disabled {
+    background-color: #f6f6f3 !important;
+  }
+}
+
+/* End of Filter Styles */
